--- a/src/app/queue/queue/queue.component.html
+++ b/src/app/queue/queue/queue.component.html
@@ -1,4 +1,4 @@
-<div class="page-header-main headerBackground">
+<div class="page-header-main headerBackground teamHeader">
     <div class="row align-items-center justify-content-between">
         <div class="col-md-auto col-sm-auto col">
             <div class="content-header">
