--- a/src/app/interaction-reports/l2-l3-interactions-reports-list/l2-l3-interactions-reports-list.component.html
+++ b/src/app/interaction-reports/l2-l3-interactions-reports-list/l2-l3-interactions-reports-list.component.html
@@ -165,6 +165,10 @@
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Source</th>
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.interactionCreatedThroughMedia}}</td>
             </ng-container>
+            <ng-container matColumnDef="problemId">
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Problem Id</th>
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.problemId || row?.problemID}} </td>
+            </ng-container>
             <ng-container matColumnDef="lastResolvedAt">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Last Resolved At</th>
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.lastResolvedAt}}</td>
