--- a/src/app/interaction-reports/reports185-list/reports185-list.component.html
+++ b/src/app/interaction-reports/reports185-list/reports185-list.component.html
@@ -86,6 +86,11 @@
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.contactName || row.contactName}}
                 </td>
             </ng-container>
+            <ng-container matColumnDef="mobile">
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Mobile No.</th>
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.mobileNo || '--'}}
+                </td>
+            </ng-container>
             <ng-container matColumnDef="createdteam">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Team
                 </th>
