--- a/src/app/interaction-reports/reports187/reports187.component.html
+++ b/src/app/interaction-reports/reports187/reports187.component.html
@@ -177,6 +177,11 @@
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.reopenFlag}}
                 </td>
             </ng-container>
+            <ng-container matColumnDef="mobile">
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Mobile No.</th>
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.mobileNo || '--'}}
+                </td>
+            </ng-container>
             <ng-container matColumnDef="priorityName">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Priority Name</th>
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.priorityName}}
