--- a/src/app/interaction-reports/all-team-month-dump-report/all-team-month-dump-report.component.html
+++ b/src/app/interaction-reports/all-team-month-dump-report/all-team-month-dump-report.component.html
@@ -7,7 +7,7 @@
         </div>
     </div>
 </div>
-<div class="loading-shade" *ngIf="dataSource.loading$ | async">
+<div class="loading-shade" *ngIf="(dataSource.loading$ | async) || isLoading">
     <mat-spinner></mat-spinner>
 </div>
 <div class="mb-3">
@@ -118,7 +118,7 @@
             </ng-container>
             <ng-container matColumnDef="mobile">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Mobile No.</th>
-                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.mobile || '--'}}
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.mobileNo || '--'}}
                 </td>
             </ng-container>
             <ng-container matColumnDef="docketNumber">
