--- a/src/app/interaction-reports/open-interactions-report/open-interactions-report.component.html
+++ b/src/app/interaction-reports/open-interactions-report/open-interactions-report.component.html
@@ -77,6 +77,11 @@
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.assignToName || row?.assignedTo}}
                 </td>
             </ng-container>
+            <ng-container matColumnDef="mobile">
+                <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Mobile No.</th>
+                <td class="table-column-200" mat-cell *matCellDef="let row"> {{row?.mobileNo || '--'}}
+                </td>
+            </ng-container>
             <ng-container matColumnDef="problemId">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header>Problem Id</th>
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.problemId || row?.problemID}} </td>
