--- a/src/app/inventory/inventory-list/inventory-list.component.html
+++ b/src/app/inventory/inventory-list/inventory-list.component.html
@@ -43,12 +43,12 @@
                 <mat-label for="search">Interaction ID</mat-label>
                 <!-- <div class="input-container">
                     <span class="input-prefix">{{prefix}}</span> searchPrefix-->
-                    <input type="text" [(ngModel)]="search" maxlength="20" class="form-control " id="search">
+                    <input type="text" [(ngModel)]="search"  placeholder="Search by Interaction id"  (keyup.enter)="searchInteractionList()" maxlength="20" class="form-control " id="search">
                 <!-- </div> -->
             </div>
         </div>
         <!-- <div class="col-md-2"> -->
-        <div class="col-md-3">
+        <div class="col-md-2">
             <div class="form-group">
                 <mat-label> Status </mat-label>
                 <mat-select [(ngModel)]="selectedStatus" (selectionChange)="onStatusChange($event)"
@@ -57,69 +57,22 @@
                 </mat-select>
             </div>
         </div>
-        <div class="col-md-2">
+        <div class="col-md-3">
             <div class="form-group">
                 <mat-label> Sub Status </mat-label>
-                <mat-select [disabled]="!selectedStatus" [(ngModel)]="selectedSubStatus" placeholder="Select status"
+                <mat-select [disabled]="!selectedStatus" [(ngModel)]="selectedSubStatus" placeholder="Select Sub Status"
                     class="form-control">
                     <mat-option [value]="status?.id" *ngFor="let status of subStatusList">{{status?.name}}</mat-option>
                 </mat-select>
             </div>
         </div>
-        <div class="col-md-2">
-            <div class="form-group">
-                <mat-label>Type </mat-label>
-                <mat-select [(ngModel)]="selectedType" (selectionChange)="onTypeChange($event)"
-                    placeholder="Select type" class="form-control">
-                    <ng-container *ngFor="let type of typeList">
-                        <mat-option *ngIf="type.name !='Email' " [value]="type?.id" >{{type?.name}}</mat-option>
-                    </ng-container>
-                </mat-select>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="form-group">
-                <mat-label> Category </mat-label>
-                <mat-select [disabled]="!selectedType" [(ngModel)]="selectedCategory"
-                    (selectionChange)="onCatChange($event);catInput=''" placeholder="Select category" class="form-control">
-                   
-                    <ng-container>
-                        <input type="text" class="form-control sticky-input" [(ngModel)]="catInput"
-                            placeholder="Search Category" autocomplete="off" />
-                            <mat-option [value]="cat?.id" *ngFor="let cat of categoryList | searchFilter : 'name':catInput">{{cat?.name}}</mat-option>
-                    </ng-container>
-                   
-                    
-                </mat-select>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="form-group">
-                <mat-label> Sub Category </mat-label>
-                <mat-select (selectionChange)="subCatInput=''" [disabled]="!selectedCategory" [(ngModel)]="selectedSubCategory" placeholder="Select type"
-                    class="form-control">
-                    <ng-container>
-                        <input type="text" class="form-control sticky-input" [(ngModel)]="subCatInput"
-                            placeholder="Search Category" autocomplete="off" />
-                            <mat-option [value]="cat?.id" *ngFor="let cat of subCategoryList | searchFilter : 'name':subCatInput">{{cat?.name}}</mat-option>
-                    </ng-container>
-                   
-                </mat-select>
-            </div>
-        </div>
-      
-        <div class="col-md-2">
-            <div class="form-group">
-                <mat-label> Team </mat-label>
-                <mat-select [(ngModel)]="selectedTeam" placeholder="Select team" class="form-control">
-                    <mat-option [value]="team?.id" *ngFor="let team of teamList">{{team?.name}}</mat-option>
-                </mat-select>
-            </div>
-        </div>
-        <div class="col-md-2">
+        <div class="col-md-4">
             <button type="button" (click)="searchList()" class="btn btn-success btn-sm mx-2 button-margin"><i
-                    class="fas fa-save"></i>
+                    class="fas fa-search"></i>
                 Search</button>
+            <button type="button" (click)="OpenAdvanceSearch()" class="btn btn-warning btn-sm mx-2 button-margin"><i
+                    class="fas fa-search"></i>
+                Advance Search</button>
             <button type="button" (click)="onClear();" class="btn btn-danger btn-sm button-margin"><i
                     class="fas fa-times-circle"></i>
                 Clear </button>
