--- a/src/app/inventory/my-interactions-list/my-interactions-list.component.html
+++ b/src/app/inventory/my-interactions-list/my-interactions-list.component.html
@@ -29,21 +29,7 @@
                     <span class="input-prefix">{{prefix}}</span>
                     <input type="text" [(ngModel)]="search" maxlength="20" class="form-control searchPrefix" id="search">
                 </div> -->
-                <input type="text" [(ngModel)]="search" placeholder="search by interaction id" class="form-control" id="search">
-            </div>
-        </div>
-        <div class="col-md-2">
-            <div class="form-group">
-                <mat-label>Type </mat-label>
-                <mat-select [(ngModel)]="selectedType" (selectionChange)="onTypeChange($event)"
-                    placeholder="Select type" class="form-control">
-                   
-                    <ng-container *ngFor="let type of typeList">
-                        <mat-option *ngIf="type.name !='Email' " [value]="type?.id" >{{type?.name}}</mat-option>
-                    </ng-container>
-                   
-                    <!-- <mat-option [value]="type?.id" *ngFor="let type of typeList">{{type?.name}}</mat-option> -->
-                </mat-select>
+                <input type="text" [(ngModel)]="search" (keyup.enter)="searchInteractionList()" placeholder="Search by interaction id" class="form-control" id="search">
             </div>
         </div>
         <div class="col-md-3">
@@ -58,9 +44,23 @@
         <div class="col-md-3">
             <div class="form-group">
                 <mat-label> Sub Status </mat-label>
-                <mat-select [disabled]="!selectedStatus" [(ngModel)]="selectedSubStatus" placeholder="Select status"
+                <mat-select [disabled]="!selectedStatus" [(ngModel)]="selectedSubStatus" placeholder="Select sub status"
                     class="form-control">
                     <mat-option [value]="status?.id" *ngFor="let status of subStatusList">{{status?.name}}</mat-option>
+                </mat-select>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="form-group">
+                <mat-label>Type </mat-label>
+                <mat-select [(ngModel)]="selectedType" (selectionChange)="onTypeChange($event)"
+                    placeholder="Select type" class="form-control">
+                   
+                    <ng-container *ngFor="let type of typeList">
+                        <mat-option *ngIf="type.name !='Email' " [value]="type?.id" >{{type?.name}}</mat-option>
+                    </ng-container>
+                   
+                    <!-- <mat-option [value]="type?.id" *ngFor="let type of typeList">{{type?.name}}</mat-option> -->
                 </mat-select>
             </div>
         </div>
@@ -83,11 +83,11 @@
         <div class="col-md-3">
             <div class="form-group">
                 <mat-label> Sub Category </mat-label>
-                <mat-select (selectionChange)="subCatInput=''" [disabled]="!selectedCategory" [(ngModel)]="selectedSubCategory" placeholder="Select type"
+                <mat-select (selectionChange)="subCatInput=''" [disabled]="!selectedCategory" [(ngModel)]="selectedSubCategory" placeholder="Select sub category"
                     class="form-control">
                     <ng-container>
                         <input type="text" class="form-control sticky-input" [(ngModel)]="subCatInput"
-                            placeholder="Search Category" autocomplete="off" />
+                            placeholder="Search category" autocomplete="off" />
                             <mat-option [value]="cat?.id" *ngFor="let cat of subCategoryList | searchFilter : 'name':subCatInput">{{cat?.name}}</mat-option>
                     </ng-container>
                    
@@ -98,7 +98,7 @@
         <div class="col-md-2">
             <div class="form-group">
                 <mat-label> Team </mat-label>
-                <mat-select [(ngModel)]="selectedTeam" placeholder="Select team" class="form-control">
+                <mat-select [(ngModel)]="selectedTeam" placeholder="Select team" class="form-control" multiple>
                     <mat-option [value]="team?.id" *ngFor="let team of teamList">{{team?.name}}</mat-option>
                 </mat-select>
             </div>
